[package]
name = "chain-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
borsh = "0.10.3"
once_cell = "1.18.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
sha256 = "1.1.4"
