[package]
name = "chain-db"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes="0.7.5"
base64 = "0.21.2"
block-modes="0.8.1"
borsh = "0.10.3"
hex = "0.4.3"
hex-literal = "0.4.1"
once_cell = "1.18.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
sha256 = "1.1.4"
