[package]
name = "chain-db"
version = "1.2.1"
edition = "2021"

[dependencies]
# Web Frameworks e Servidores
actix-web = "4.4.0"
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
rocket_ws = "0.1.0"
futures = "0.3"

# Criptografia e Segurança
aes-gcm = "0.10.3"
bcrypt = "0.15.0"
sha2 = "0.10.8"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
uuid = { version = "1.6.1", features = ["v4"] }

# Serialização e Dados
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
base64 = "0.21.7"

# Utilitários e Suporte Assíncrono
async-trait = "0.1.77"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
thiserror = "1.0"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
# Dependências para Testes
tempfile = "3.10.1"
